fix timer reappearing bug on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -56,5 +56,4 @@ button {
 .fade-out {
   animation-name: topFadeOut;
   animation-duration: 3.5s;
-  opacity: 0;
 }
